practice of component communication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,5 +39,12 @@
 <app-header></app-header> -->
 
 <!-- <mat-slider min="1" max="100" step="1" value="50"></mat-slider> -->
+<!-- parent to child Communication -->
+<!-- <app-table [datasource] = "data"></app-table> -->
 
-<app-table></app-table>
+<!-- <h1>Test Communication :: {{parentData}}</h1> -->
+
+
+<!-- child to parent Communication -->
+<!-- <app-child (submitData) = "updateParentData($event)"></app-child> -->
+
