--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,3 +48,4 @@
 <!-- child to parent Communication -->
 <!-- <app-child (submitData) = "updateParentData($event)"></app-child> -->
 
+<!-- <h1>{{parentData | fullName : 'Ananta' : 'pothal'}}</h1> -->
