angular reouting practices

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,3 +49,18 @@
 <!-- <app-child (submitData) = "updateParentData($event)"></app-child> -->
 
 <!-- <h1>{{parentData | fullName : 'Ananta' : 'pothal'}}</h1> -->
+
+<!-- <app-reactive-forms></app-reactive-forms>-->
+
+<!-- <ul>
+  <li>
+    <a routerLink = 'table'> table component</a>
+  </li>
+  <li>
+    <a routerLink = 'reactive-forms'> reactive form component component</a>
+  </li>
+</ul>
+
+
+
+<router-outlet></router-outlet> -->
