prace of service model and interface

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,5 +62,15 @@
 </ul>
 
 
-
 <router-outlet></router-outlet> -->
+
+<div class= "main-component">
+   <div class="child-component">
+    <app-first></app-first>
+   </div>
+   <div class="child-component">
+    <app-second></app-second>
+   </div>
+</div>
+
+
