lazy loading of module child routing and also group routing practice

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -64,7 +64,7 @@
 
 <router-outlet></router-outlet> -->
 
-<div class= "main-component">
+<!-- <div class= "main-component">
    <div class="child-component">
     <app-first></app-first>
    </div>
@@ -76,6 +76,15 @@
 <app-login></app-login>
 
 
-<a routerLink = 'product/add'>Add product here</a>
+<a routerLink = 'product/add'>Add product here</a> -->
+
+<ul>
+  <li>
+    <a routerLink = "/user/login">User Login</a>
+  </li>
+  <li>
+    <a routerLink = "/admin/login">Admin Login</a>
+  </li>
+</ul>
 
 <router-outlet></router-outlet>
